Added degree centrality

--- a/finalproject/fproject/templates/fproject/index.html
+++ b/finalproject/fproject/templates/fproject/index.html
@@ -7,6 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet">
 </head>
 <body>
+<div class="row">
 <a href="{% url 'pagerank' %}" class="btn btn-primary">Run Pagerank</a>
+<a href="{% url 'degreecentrality' %}" class="btn btn-primary">Run Degree Centrality</a>
+</div>
 </body>
 </html>
