--- a/finalproject/fproject/templates/fproject/index.html
+++ b/finalproject/fproject/templates/fproject/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
 <div class="row">
-	<div class="col-md-12">
+	<div class="col-md-10">
 		<a href="{% url 'pagerank' %}" class="btn btn-primary">
 			Run Pagerank
 		</a>
 		<a href="{% url 'degreecentrality' %}" class="btn btn-primary">
 			Run Degree Centrality
+		</a>
+		<a href="{% url 'isochrones' %}" class="btn btn-primary">
+			Isochrones
 		</a>
 	</div>
 </div>
